select weight and count width fixed on mobile

--- a/src/components/Exercise/Exercise.css
+++ b/src/components/Exercise/Exercise.css
@@ -19,6 +19,7 @@
 	margin: 10px 20px 10px 0px;
 	padding-right: 6px;
 	transition: scale 0.15s ease-out;
+	max-width: 96%;
 }
 
 .weight:hover,
@@ -43,4 +44,11 @@
 	width: 2.5em;
 	display: flex;
 	align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+	.weight:hover,
+	.count:hover {
+		scale: 1;
+	}
 }
